# zenith

./: .gitignore  LICENSE  Makefile  README.md  dune-project  zenith.odocl  zenith.opam
.github/workflows/: ci.yml
docs/: dune  zenith.mld
lib/: config.ml  constants.ml  dune  input.ml  logging.ml  matrix.ml  mesh.ml  obj.ml  objloader.ml  render.ml  renderer.ml  vector.ml
lib/logging/: dune  logging.ml
lib/math/: dune  vector.ml
media/: logo.blend
media/bad_perspective/: BadPerspective.md
media/success1/: Success1.md
media/success2/: Success2.md
objs/: lambdacube.blend  lambdacube.mtl  zenith.mtl
test/: dune  zenith.ml
