(lang dune 3.9)

(name zenith)

(generate_opam_files true)

(source
 (github CharlesAverill/zenith))

(authors "Charles Averill")

(maintainers "Charles Averill")

(license LICENSE)

(documentation https://github.com/CharlesAverill/zenith)

(package
 (name zenith)
 (synopsis "A wireframe renderer")
 (description "Zen Engine for Navigating wIreframes In Three-dimensional Holographic space")
 (depends ocaml dune graphics))

